- Fix misc HTML/CSS bugs. - BR 2038543 Tabs not showing correctly in 0.69b2 NB3622. Thanks to ceejayemm1.

--- a/www/tabs.css
+++ b/www/tabs.css
@@ -25,10 +25,10 @@ td.tabnavtbl a:hover {
 	background-position: 100% -150px;
 }
 td.tabnavtbl a:visited, td.tabnavtbl a:link {
-	color: #FFFFFF;
+	color: white;
 }
 td.tabnavtbl a:active, td.tabnavtbl a:hover {
-	color: #000000;
+	color: black;
 }
 td.tabnavtbl span {
 	float: left;
@@ -53,9 +53,9 @@ td.tabnavtbl a:hover span {
 td.tabnavtbl li.tabact a {
 	background-position: 100% -150px;
 	border-width: 0px;
-	color: #000000;
 }
 td.tabnavtbl li.tabact span {
 	background-position: 0% -150px;
 	padding-bottom: 6px;
+	color: black;
 }
